k8native/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: theblacklist
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
