k8native/flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapi-deployment
  namespace: hitlist
  labels:
    app: blacklist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blacklist
  template:
    metadata:
      labels:
        app: blacklist
    spec:
      containers:
        - name: blacklist
          image: quay.io/gary_crowe/hitlist
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: blacklist
              protocol: TCP
---
