k8native/svc-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-flask
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: blacklist
  type: LoadBalancer
