k8native/ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hitlist
  namespace: hitlist
spec:
  ingressClassName: nginx
  rules:
  - host: hitlist.mycluster.kubernetes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-flask
            port:
              number: 5000
