k8native/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
spec:
  ingressClassName: flask-hitlist
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srv-flask
            port:
              number: 80
